# finance-agent

./: .gitignore  Makefile  README.md  agent.py  contract.py  contract.yaml  custom_model.py  get_agent.py  llm.py  logger.py  prompt.py  pyproject.toml  requirements.txt  run_agent.py  setup.sh  tool.py  tools.py  utils.py
data/: public.csv  public.txt
finance_agent/: __init__.py  custom_model.py  exceptions.py  get_agent.py  key_rotator.py  prompt.py  run_agent.py  tools.py
src/: agent.py  custom_model.py  exceptions.py  get_agent.py  logger.py  prompt.py  run_agent.py  tools.py  utils.py
src/data/: public.txt
src/finance_agent/: agent.py  get_agent.py  run_agent.py  tools.py  utils.py
src/finance_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wheels/: model_library-0.1.13.dev182+g31c199b44-py3-none-any.whl  model_library-0.1.13.dev183+gd461e5e36-py3-none-any.whl
