[project]
name = "finance-agent"
authors = [
  { name = "Vals AI, Inc.", email = "contact@vals.ai" },
]
version = "0.1.0"
description = "Finance Agent Benchmark Codebase"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.13.2",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "model-library>=0.1.8",
    "requests>=2.32.5",
    "sec-api>=1.0.32",
]

[dependency-groups]
dev = [
  # style
  "ruff",
  "basedpyright",
  # env
  "dotenv",
]

[tool.basedpyright]
exclude = [
  "data/*",
]
# typeCheckingMode = "strict"
reportExplicitAny = false
