[project]
name = "finance-agent"
authors = [
  { name = "Vals AI, Inc.", email = "contact@vals.ai" },
]
version = "0.1.0"
description = "Finance Agent Benchmark Codebase"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.13.2",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "sec-api>=1.0.32",
    # model-library from the private model-proxy repo; [docent] extra pulls in
    # docent-python so we can reuse `model_library.ingest.build_agent_run`.
    "model-library[docent] @ git+ssh://git@github.com/vals-ai/model-proxy.git@oa/add-ingest-script",
    "tavily-python>=0.7.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finance_agent"]

[tool.hatch.metadata]
# Needed because `model-library` is pulled from a git URL (direct reference).
allow-direct-references = true

[dependency-groups]
dev = [
  # style
  "ruff",
  "basedpyright",
  # env
  "dotenv",
]

[project.scripts]
finance-agent = "finance_agent.run_agent:main_sync"

[tool.basedpyright]
exclude = [
  "data/*",
  ".*",
]
typeCheckingMode = "basic"
reportExplicitAny = false
